[package]
name = "solve"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
deadpool-postgres = "0.11.0"
deadpool-sqlite = "0.7.0"
futures = { version = "0.3.29", features = ["executor"] }
futures-core = "0.3.29"
gtmpl = "0.7.1"
rustls = "0.21.9"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
tokio-postgres-rustls = "0.10.0"
tokio-util = "0.7.10"
